# XML_generator_netwin

./: .gitignore  README.md  app.py  constants.py  pyproject.toml  settings.py
routes/: __init__.py  index.py
routes/csv_modelo/: modelo.csv
routes/static/css/: base.css  conversor_csv.css  progresso.css
routes/static/js/: conversor_csv.js  progresso.js
routes/templates/: base.html  conversor_csv.html  index.html  progresso.html  resultado.html  resultado_conversor.html  sobre.html
service/: service_convert_csv_paterns.py  service_xml_generator.py
