[project]
name = "geradorxml"
version = "0.1.0"
description = "Aplicação flask para gerar arquivo xml a partir de um arquivo csv de acordo com a estrutura de importação do sistema Netwin."
authors = [
    {name = "geovanecarvalho",email = "geovane.carvalho@telemont.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
